# contracts

./: README.md  Vagrantfile
ft-factory/: Cargo.toml  README.md  deploy.sh
ft-factory/neardev/: dev-account  dev-account.env
ft-factory/src/: lib.rs
ft/ft/: Cargo.toml
ft/ft/src/: commands.sh  lib.rs
ft/res/: reality_token.wasm
ft/scripts/: build.sh
marketplace/: README.md
marketplace/src/: tmp.rs
nft/: README.md
nft-factory/: Cargo.toml  README.md  deploy.sh
nft-factory/neardev/: dev-account  dev-account.env
nft-factory/src/: lib.rs
nft-factory/src/nft-contract/: approval_receiver.wasm  nft_simple.wasm  non_fungible_token.wasm  token_receiver.wasm
nft/nft/src/: lib.rs
package-contract/: Cargo.toml  README.md  call_new.sh  deploy.sh
package-contract/packages-contract/: Cargo.toml
package-contract/packages-contract/src/: lib.rs  utils.rs
package-contract/res/: packages_contract.wasm  paras_vesting_contract.wasm
package-contract/tests/: utils.rs
presale/: Cargo.lock.cp  Cargo.toml  README.md  deploy.sh
presale/paras-vesting-contract/: Cargo.toml
presale/paras-vesting-contract/src/: lib.rs  utils.rs
presale/res/: paras_vesting_contract.wasm
