[package]
name = "reality-package-contract"
version = "0.0.1"
authors = ["Reality"]
edition = "2021"

[dev-dependencies]
near-sdk = "=4.0.0"
near-sdk-sim = "=3.2.0"
packages-contract = { path = "./packages-contract" }
chrono = "0.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = [
  "packages-contract",
]
